fix: bento box on tm7 template - misaligned image

--- a/components/cosyLandingPage/bentoBoxTiles/bentoBoxTiles.module.scss
+++ b/components/cosyLandingPage/bentoBoxTiles/bentoBoxTiles.module.scss
@@ -1,23 +1,111 @@
+$bp-xl: 1579px;
+$bp-lg: 1267px;
+$bp-md: 935px;
+$bp-sm: 739px;
+$space-xl: 40px;
+$space-lg: 32px;
+$space-md: 24px;
+$space-sm: 20px;
+$space-xs: 16px;
+
 .bentoBoxTile {
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: $space-xl;
   background: #f3f5f3;
 
-  .darkModeEnabled & {
-    background: #3f4447;
+  &.tileBig {
+    @media (min-width: ($bp-lg + 1)) {
+      flex-direction: column-reverse;
+    }
   }
-}
 
-.tileContent {
-  flex: 1;
+  .tileContent {
+    flex: 1;
+  }
+
+  .tileImageContainer {
+    transform: translateX(-$space-xl);
+    width: calc(100% + ($space-xl * 2));
+    margin-top: -$space-xl;
+    text-align: left;
+
+    img {
+      display: block;
+      width: 100%;
+    }
+
+    .tileBig & {
+      transform: translate(-$space-xl, $space-xl);
+    }
+  }
+
+  .tileImageContainer.tileImageBottom {
+    order: 2;
+    margin: 0 0 - $space-xl;
+    text-align: right;
+  }
+
+  .tileIcon {
+    width: 48px;
+    height: 48px;
+    margin-bottom: $space-xs;
+    color: #707375;
+  }
+
+  .tileText {
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .tileTitle {
+    margin-bottom: -8px;
+  }
+
+  .tileTitleSecondary {
+    margin-bottom: 8px;
+  }
+
+  @media (max-width: $bp-md) {
+    padding: $space-xs $space-xs calc($space-xs * 2);
+
+    .tileImageContainer {
+      transform: translateX(-$space-xs);
+      width: calc(100% + ($space-xs * 2));
+      margin-top: -$space-xs;
+    }
+
+    .tileImageContainer.tileImageBottom {
+      transform: translateX($space-xs);
+      align-self: flex-end;
+      margin-bottom: - calc($space-xs * 2);
+    }
+
+    .tileText {
+      font-size: 14px;
+      line-height: 22px;
+    }
+  }
 }
 
 .bentoBoxTiles {
   display: grid;
-  grid-gap: 40px;
   grid-template-columns: repeat(3, 1fr);
+  gap: $space-xl;
   margin: 0 auto;
+
+  &.darkModeEnabled {
+    .bentoBoxTile {
+      background: #3f4447;
+
+      .tileIcon,
+      .tileText,
+      .tileTitle,
+      .tileTitleSecondary {
+        color: #fff;
+      }
+    }
+  }
 
   .bentoBoxTile {
     &:nth-child(1) {
@@ -40,135 +128,55 @@
       grid-row: span 1;
     }
 
+    &:nth-child(4) {
+      grid-column: 1;
+      grid-row: span 1;
+    }
+
     &:nth-child(5) {
       grid-column: 2;
       grid-row: 2 / 4;
     }
   }
 
-  @media (width <= 1579px) {
-    grid-gap: 32px;
+  @media (max-width: $bp-xl) {
+    gap: $space-lg;
   }
 
-  @media (width <= 1267px) {
-    grid-gap: 24px;
+  @media (max-width: $bp-lg) {
+    gap: $space-md;
   }
 
-  @media (width <= 935px) {
-    grid-gap: 20px;
+  @media (max-width: $bp-md) {
     grid-template-columns: repeat(2, 1fr);
+    gap: $space-sm;
 
     .bentoBoxTile {
-      padding: 16px 16px 32px;
-
       &:nth-child(3) {
         grid-column: 1 / 3;
         order: 2;
       }
+
+      &.tileBig {
+        flex-direction: row-reverse;
+        align-items: center;
+        padding: $space-xs;
+
+        .tileImageContainer {
+          transform: none;
+          width: auto;
+          margin: -$space-xs;
+        }
+
+        .tileImageContainer.tileImageBottom {
+          flex: 1;
+          justify-content: flex-end;
+        }
+      }
     }
   }
 
-  @media (width <= 739px) {
-    grid-gap: 16px;
-  }
-}
-
-.tileBig {
-  @media (width <= 935px) {
-    flex-direction: row-reverse;
-    align-items: center;
-    padding: 16px !important;
-  }
-
-  @media (width >= 1268px) {
-    flex-direction: column-reverse;
-  }
-}
-
-.tileImageContainer {
-  transform: translateX(-40px);
-  width: calc(100% + 80px);
-  margin-top: -40px;
-  text-align: left;
-
-  .tileBig & {
-    transform: translate(-40px, 40px);
-  }
-
-  img {
-    display: block;
-    width: 100%;
-  }
-
-  @media (width <= 935px) {
-    transform: translateX(-16px);
-    width: calc(100% + 32px);
-    margin-top: -16px;
-
-    .tileBig & {
-      transform: none;
-      margin: -16px;
-    }
-  }
-}
-
-.tileImageBottom {
-  display: flex;
-  order: 2;
-
-  margin-top: 0;
-  margin-bottom: -40px;
-
-  text-align: right;
-
-  @media (width <= 935px) {
-    transform: translateX(16px);
-    align-self: flex-end;
-    margin-bottom: -32px;
-
-    .tileBig & {
-      flex: 1;
-      justify-content: flex-end;
-    }
-  }
-}
-
-.tileIcon {
-  width: 48px;
-  height: 48px;
-  margin-bottom: 16px;
-  color: #707375;
-
-  .darkModeEnabled & {
-    color: #dcdfdc;
-  }
-}
-
-.tileText {
-  font-size: 16px;
-  line-height: 26px;
-
-  .darkModeEnabled & {
-    color: #fff;
-  }
-
-  @media (width <= 935px) {
-    font-size: 14px;
-    line-height: 22px;
-  }
-}
-
-.tileTitle {
-  margin-bottom: -8px;
-}
-
-.tileTitleSecondary {
-  margin-bottom: 8px;
-}
-
-.tileTitle,
-.tileTitleSecondary {
-  .darkModeEnabled & {
-    color: #fff;
+  @media (max-width: $bp-sm) {
+    gap: $space-xs;
   }
 }
